--- a/sass/component/__contactvariable.scss
+++ b/sass/component/__contactvariable.scss
@@ -5,3 +5,4 @@ $bg-lightblue: rgba(113, 219, 248, 0.885);
 $bg-boxsado: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 $bg-boxsado-1: rgba(255, 255, 255, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 $bg-boxnav:0 2px 6px 8px solid grey;
+$bg-hover:grey;
