--- a/sass/component/__contactnavbar.scss
+++ b/sass/component/__contactnavbar.scss
@@ -1,40 +1,4 @@
 @import"../component/_contactvariable";
-// nav{
-//     position: fixed;
-//     z-index: 38;
-//     left: 0;
-//     top: 0;
-//     width: 100%;
-
-//     padding: 10px;
-//     background-color: $bg-color-nav;
-//     border-bottom:$bg-boxnav;
-//     display: flex;
-//     align-items: center;
-//     justify-content:space-between;
-//     .logo{
-//         height: 13vh;
-//         width: 15%;
-//     }
-   
-//     ul{
-//         display: flex;
-//         gap: 20px;
-//         list-style-type: none;
-//         margin-right: 40px;
-//         li a:hover{
-//             padding: 10px 10px;
-//             background:$bg-bady;  
-//             text-decoration: none;
-//         }
-       
-//         a{
-//             text-decoration: none;
-//             font-size: 20px;
-//         }
-        
-//     }
-// }
 nav{
     position: fixed;
     z-index: 38;
@@ -43,7 +7,7 @@ nav{
     width: 100%;
 
     padding: 10px;
-    background-color: $bg-color-nav;
+    background-color:$bg-color-nav;
     border-bottom:0 2px 6px 8px $bg-boxnav;
     display: flex;
     align-items: center;
@@ -60,7 +24,7 @@ nav{
         margin-right: 40px;
         li a:hover{
             padding: 10px 10px;
-            background: $bg-orange;  
+            background: $bg-bady;  
             text-decoration: underline;
             text-decoration: none;
         }
@@ -85,14 +49,14 @@ nav{
     position: absolute;
     left: -100px; 
     top: 20px;
-    background-color:  $bg-boxnav;
+    background-color: $bg-bady;
     min-width: 160px;
     border-radius: 5px;
     z-index: 1;
     padding: 0;
   }
 
-  .dropstart:hover.dropdown-menus {
+  .dropstart:hover .dropdown-menus {
     display: block;
   }
   
@@ -105,12 +69,12 @@ nav{
   }
   
   .dropdown-items:hover {
-    background-color: $bg-boxnav;
-    color: $bg-color-nav;
+    background-color:$bg-hover;
+    color:$bg-color-nav;
   }
   
   .dropdown-dividers {
     height: 1px;
-    background-color: $bg-boxnav;
+    background-color:$bg-lightblue;
     margin: 5px 0;
   }
