--- a/sass/component/__main-cards.scss
+++ b/sass/component/__main-cards.scss
@@ -36,8 +36,8 @@
   border-radius: 10px 10px 0px 0px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   text-align: center;
-  background-size: cover;
-  object-fit: cover;
+  // background-size: cover;
+  // object-fit: cover;
 }
 .card-tops {
   display: flex;
