--- a/sass/mixin/__reponsive_contact.scss
+++ b/sass/mixin/__reponsive_contact.scss
@@ -1,11 +1,84 @@
 @media (max-width :480px) {
     nav{
-        display: none;
+        position: fixed;
+        z-index: 38;
+        left: 0;
+        top: 0;
+        width: 100%;
+    
+        padding: 10px;
+        background-color:$bg-color-nav;
+        border-bottom:0 2px 6px 8px $bg-boxnav;
+        display: flex;
+        align-items: center;
+        justify-content:space-between;
+        .logo{
+            height: 10vh;
+            width:40%;
+        }
+       
+        ul{
+            display: flex;
+            gap: 20px;
+            list-style-type: none;
+            margin-right: 40px;
+            li a:hover{
+                padding: 10px 10px;
+                background: $bg-bady;  
+                text-decoration: underline;
+                text-decoration: none;
+            }
+           
+            a{
+                text-decoration: none;
+                font-size: 20px;
+                display: none;
+            }
+            
+        }
     }
-    footer{
-        display: none;
-    }
-
+    .dropstart {
+        position: relative;
+        display: inline-block;
+      }
+      .fa-sape {
+          margin-left: 20px;
+      }  
+      .dropdown-menus {
+        display: none; 
+        position: absolute;
+        left: -100px; 
+        top: 20px;
+        background-color: $bg-bady;
+        min-width: 160px;
+        border-radius: 5px;
+        z-index: 1;
+        padding: 0;
+      }
+    
+      .dropstart:hover .dropdown-menus {
+        display: block;
+      }
+      
+      .dropdown-items{
+        color: $bg-color-nav;
+        padding: 10px 20px;
+        text-decoration: none;
+        display: block;
+        background-color: transparent;
+      }
+      
+      .dropdown-items:hover {
+        background-color:$bg-hover;
+        color:$bg-color-nav;
+      }
+      
+      .dropdown-dividers {
+        height: 1px;
+        background-color:$bg-lightblue;
+        margin: 5px 0;
+      }
+    
     .container img{
         width: 95%;
         height: 67vh;
