--- a/sass/mixin/_responsive_about.scss
+++ b/sass/mixin/_responsive_about.scss
@@ -500,8 +500,8 @@ background: orange;
     align-items: center;
     justify-content:space-between;
     .logo{
-        height: 10vh;
-        width: 40%;
+        height: 57px;
+        width: 140px;
     }
    
     ul{
@@ -569,6 +569,8 @@ background: orange;
     background:#fff;
     position:absolute;
     top: 100px;
+    width: 100%;
+    left: 0;
 }
 .contner-mid{
     height: 170px;
@@ -579,54 +581,39 @@ background: orange;
   }
 .container1{
     background-color:#d9d9d9;
-    display: flex;
-    justify-content: space-around;
     height: 70vh;
-    gap:90px;
+    gap:10px;
+    width: 100%;
+    .p1emage{
+       display: none;
+    }
     .page-right{
         margin-top: 30px;
     }
     h1{
         margin: 10px;
-        font-size:2.8em;
+        font-size:1.8em;
          strong{
             color: $bg-orange;
         }
     }
     p{
         margin: 10px;
-        margin-left: 20px;
+
     }
     hr{
         padding: 1px;
-        width: 20%;
+        width: 60%;
         background-color: black;
         margin: 10px;
     }
     .button{
-        display: flex;
-        gap: 10px;
-        .btn1{
-            background:$bg-orange;
-            border-radius: 10px;
-            margin-left: 10px;
-            margin-top: 10px;
-            width: 20%;
-            height: 7vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .btn1:hover{
-            background-color:$bg-orange;
-            color: white;
-        }
         
         .btn2{
             border-radius: 10px;
             margin-left: 10px;
             margin-top: 10px;
-            width: 30%;
+            width: 40%;
             height: 7vh;
             background-color:#29A9B2;
             display: flex;
@@ -644,17 +631,16 @@ background: orange;
 }
 
 .container2{
-    display: flex;
-    justify-content: space-between;
-    margin: 80px;
-    margin-top: 90px;
-    gap: 50px;
+    margin: 10px;
+    margin-top: 40px;
+    gap: 10px;
+
     .contaner-right{
         background: #6e7788;
-        height: 47vh;
+        height: 60vh;
         width: 70%;
         border-radius: 10px;
-        padding: 15px;
+        padding: 10px;
     }
     h2{
         font-size: 1.6em;
@@ -679,5 +665,101 @@ background: orange;
 
 }
 // #history.....................................................
+.history{
+  margin: 10px;
+  margin-left: 70px;
+  h2{
+      color: orange;
+      margin: 10px;
+  }
+  p{
+      margin-top: 10px;
+      width: 80%;
+  }
+}
+.right-img{
+  width: 50%;
+  height: 40%;
+  display: none;
+}
+.conten-main{
+  background: #6e7788;
+  height: auto; 
+  margin-top: 30px;
+  // display: none;
+
+}
+.content-left,
+.content-right{
+  width: 1000px;
+  height: 80vh;
+  display:flex;
+}
+.list1,
+.list2
+{
+    background: lightblue;
+    display: flex;
+    padding: 6px;
+    margin-top: 10px;
+    border-radius: 10px 10px 0px 0px;
+    align-items: center;
+
+}
+.list-mid{
+  color: black;
+}
+.list_1,
+ .list_2{
+  width: 100%;
+  padding: 3px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+}
+.number{
+  background: lightseagreen;
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.year-pnc{
+  // display: flex;
+  // gap: 10px;
+  margin: 20px;
+}
+.image-right{
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+  margin: 10px;
+  display: none;
+
+  
+}
+
+
+.other-local{
+    margin-top: 50px;
+    gap: 30px;
+    display: flex;
+}
+.main-partner{
+    margin-top: 50px;
+    gap: 30px;
+    display: flex;
+}
+
+
+.logos{
+    width: 35%;
+    height: 30vh;
+}
 
 }
